Update for retriving history of ticket
